tae/yaml/aws_cli.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aws-cli2
  namespace: default
spec:
  serviceAccountName: s3-sa
  containers:
  - name: aws-cli
    image: public.ecr.aws/aws-cli/aws-cli
    command:
      - sleep
      - "3600"
  tolerations:
  - key: "was"
    operator: "Equal"
    value: "true"
    effect: "NoSchedule"
