tae/yaml/was.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      tolerations:
      - key: "was"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      containers:
      - name: was
        image: quay.io/whwo1124/was:v1.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: was
spec:
  selector:
    app: was
  ports:
    - name: was-port
      port: 80
      targetPort: 80
  type: NodePort
