tae/yaml/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  annotations:
    #nginx.ingress.kubernetes.io/upstream-hash-by: "true"
spec:
  ingressClassName: nginx
  rules:
    #  - host: foo.bar.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /was
        pathType: Prefix
        backend:
          service:
            name: was
            port:
              number: 8080
      # - path: /admin
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: svc3-admin
      #       port:
      #         number: 8080
